fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1252,6 +1252,10 @@ background-image: url("https://www.transparenttextures.com/patterns/45-degree-fa
   
 }
 
+.skillsCard{
+  margin-bottom: 15px;
+}
+
 
 
 /* 
